Fix links and images?

--- a/_posts/2019-12-10-PPG-EPROM.md
+++ b/_posts/2019-12-10-PPG-EPROM.md
@@ -12,7 +12,7 @@ PPG Wave synthesizer range is undoutebly very unique. It is not very popular, bu
 ## Getting the EPROM image
 The first challenge I was facing was getting the EPROM images. Fortunately, that's not as hard as I initially thought, and there are actually two ways of obtaining it
 
-The _easy_ way means downloading the image from website such as this one: http://dbwbp.com/index.php/9-misc/37-synth-eprom-dumps.
+The _easy_ way means downloading the image from website such as [this one](http://dbwbp.com/index.php/9-misc/37-synth-eprom-dumps).
 
 The hard way relies on extracting resources from VST DLL file with a proper tool (check [this one](https://www.nirsoft.net/utils/resources_extract.html)). If you're lukcy, you might get `something_EPROM.bin` in your output.
 
@@ -22,13 +22,13 @@ I recommend you to stick with the easy way.
 This may sound silly, but believe it or not - Audaicty is actually great for inspecting binary files, especially when you're looking for waveforms. You can also see (and hear) if parts of binary file are machine code or data relatively well. Anway, that's where I started.
 
 After we import the EPROM file as raw data into Audacity (File -> Import -> Raw data (PCM 8-bit, unsigned, little-endian)) and zoom in on the begining of the track, we see this interesting pattern:
-<img src=ppg/audacity.png></img>
+![](ppg/audacity.png)
 
 The first part certainly isn't machine code, but we will come back to that. Now, let's focus on the part that follows right after it. You can immediately say that it looks like waveforms we're looking for, but where exactly do they start and end?
 
 Fortunately, I've found description of PPG's waveforms and wavetables. It's available [here](https://www.cyborgstudio.com/wimpy/synthmp3s/ppg/wave2/manual/ppgwavetables.pdf), and it's going to help us a lot. It contains tables showing us how all the waveforms look. For example, these are the waveforms 0 to 7:
 
-<img src=ppg/first8.png></img>
+![](ppg/first8.png)
 
 At this point, it's very easy to see the matching part. Just remember that the PPG Wave only stores the first half of a cycle of each waveform. If you position the cursor just right, you will see that the waveform table starts exactly at sample (byte) 768 - a lovely round number.
 
@@ -54,17 +54,17 @@ Earlier, I said that the first 768 bytes of EPROM look like data to me. That's w
 
 Initially, let's treat each byte as waveform index and work out if it matches layout of any of the wavetables.
 
-<img src=ppg/wav00h.png /> <img src=ppg/wav65h.png /> <img src=ppg/wav00h.png /> <img src=ppg/wav45h.png /> <img src=ppg/wav08h.png />
+![](ppg/wav00h.png) ![](ppg/wav65h.png) ![](ppg/wav00h.png) ![](ppg/wav45h.png) ![](ppg/wav08h.png)
 And here's wavetable 0:
 
-<img src=ppg/table0.png />
+![](ppg/table0.png)
 Keep in mind, that the waveforms with red text over them are results of interpolation and are not stored anywhere in the waveform bank. That means, here only waves 0, 8, 16 (and so on) are stored in the waveform table. I'm going to call them 'key' waveforms for the lack of a better name.
 
 Anyway, did you notice that first 'key' waveform in the wavetable 0 is exactly the same as wave 65h? The second one looks exactly like waveform 45h. That gives us an important clue. It seems that every second byte denotes waveform index. Moreover, you can notice that each index byte is followed by wave position (slot) in the wavetable.
 
 This pattern extends and we eventually get to seemingly the last "key" wave in wavetable 0 - wave 4Ah on position 30h. 
 
-<img src=ppg/table0back.png />
+![Wavetable 0](ppg/table0back.png)
 
 The interpolated waveforms, however, go on further - up to the slot 3Bh, after which the set of waveforms common for all wavetables follows. Examining the next two bytes of hexdump reveals that in reality there's one more 'key' wave stored - 4Bh in the slot 3Ch. It seems to be used only to allow further interpolation, because it's overriden with the always present traingle wave.
 
@@ -96,11 +96,11 @@ Also, if you have any thoughts, please let me know in the comments section or [e
 
 
 Here are some important resources, that made everything you just read possible:
- - Herman Seib's website - https://www.hermannseib.com/
- - PPG Wave website - http://www.ppg.synth.net/wave22/
- - The PPG Wave waveform and wavetable description - https://www.cyborgstudio.com/wimpy/synthmp3s/ppg/wave2/manual/ppgwavetables.pdf
- - NirSoft ResourceExtract - https://www.nirsoft.net/utils/resources_extract.html
- - Synthesizer EPROM dumps - http://dbwbp.com/index.php/9-misc/37-synth-eprom-dumps
+ - [Herman Seib's website](https://www.hermannseib.com/)
+ - [PPG Wave website](http://www.ppg.synth.net/wave22/)
+ - [The PPG Wave waveform and wavetable description](https://www.cyborgstudio.com/wimpy/synthmp3s/ppg/wave2/manual/ppgwavetables.pdf)
+ - [NirSoft ResourceExtract](https://www.nirsoft.net/utils/resources_extract.html)
+ - [Synthesizer EPROM dumps](http://dbwbp.com/index.php/9-misc/37-synth-eprom-dumps)
 
 Thank you for reading :)
 
