Run aspell on the PPG post

--- a/_posts/2019-12-10-PPG-EPROM.md
+++ b/_posts/2019-12-10-PPG-EPROM.md
@@ -7,21 +7,21 @@ comments: true
 
 ---
 
-PPG Wave synthesizer range is undoutebly very unique. It is not very popular, but I've seen some people looking for its wavetables or waveform samples on different forums. Recently, I managed to extract those from EPROM dumps I found online, so I just wanted to share my findings with all of you, who are still looking for it.
+PPG Wave synthesizer range is undoubtedly very unique. It is not very popular, but I've seen some people looking for its wavetables or waveform samples on different forums. Recently, I managed to extract those from EPROM dumps I found online, so I just wanted to share my findings with all of you, who are still looking for it.
 
 ## Getting the EPROM image
 The first challenge I was facing was getting the EPROM images. Fortunately, that's not as hard as I initially thought, and there are actually two ways of obtaining it
 
 The _easy_ way means downloading the image from website such as [this one](http://dbwbp.com/index.php/9-misc/37-synth-eprom-dumps).
 
-The hard way relies on extracting resources from VST DLL file with a proper tool (check [this one](https://www.nirsoft.net/utils/resources_extract.html)). If you're lukcy, you might get `something_EPROM.bin` in your output.
+The hard way relies on extracting resources from VST DLL file with a proper tool (check [this one](https://www.nirsoft.net/utils/resources_extract.html)). If you're lucky, you might get `something_EPROM.bin` in your output.
 
 I recommend you to stick with the easy way.
 
 ## Inspecting the EPROM contents
-This may sound silly, but believe it or not - Audaicty is actually great for inspecting binary files, especially when you're looking for waveforms. You can also see (and hear) if parts of binary file are machine code or data relatively well. Anway, that's where I started.
+This may sound silly, but believe it or not - Audacity is actually great for inspecting binary files, especially when you're looking for waveforms. You can also see (and hear) if parts of binary file are machine code or data relatively well. Anyway, that's where I started.
 
-After we import the EPROM file as raw data into Audacity (File -> Import -> Raw data (PCM 8-bit, unsigned, little-endian)) and zoom in on the begining of the track, we see this interesting pattern:
+After we import the EPROM file as raw data into Audacity (File -> Import -> Raw data (PCM 8-bit, unsigned, little-endian)) and zoom in on the beginning of the track, we see this interesting pattern:
 
 ![]({{site.baseurl}}/img/ppg/audacity.png)
 
@@ -33,7 +33,7 @@ Fortunately, I've found description of PPG's waveforms and wavetables. It's avai
 
 At this point, it's very easy to see the matching part. Just remember that the PPG Wave only stores the first half of a cycle of each waveform. If you position the cursor just right, you will see that the waveform table starts exactly at sample (byte) 768 - a lovely round number.
 
-[Knowing that](http://www.ppg.synth.net/wave22/) each waveform consists of 64 samples, and there are 256 waveforms total, we can determine that the waveform table is 16kiB long and ends at byte 17152. You might, however, notice that waveform data seems to go past that point. I don't know the exact layout of EPROM and can't say if that part is being used at all. Fortunately, the waveform description implies that the first 256 waves are all we need.
+[Knowing that](http://www.ppg.synth.net/wave22/) each waveform consists of 64 samples, and there are 256 waveforms total, we can determine that the waveform table is 16KiB long and ends at byte 17152. You might, however, notice that waveform data seems to go past that point. I don't know the exact layout of EPROM and can't say if that part is being used at all. Fortunately, the waveform description implies that the first 256 waves are all we need.
 
 On Linux, the data can be extracted to another file with `dd` command:
 ```dd if=eprom.bin of=waveforms.bin skip=768 count=16384 bs=1```
@@ -68,7 +68,7 @@ This pattern extends and we eventually get to seemingly the last "key" wave in w
 
 ![Wavetable 0]({{site.baseurl}}/img/ppg/table0back.png)
 
-The interpolated waveforms, however, go on further - up to the slot 3Bh, after which the set of waveforms common for all wavetables follows. Examining the next two bytes of hexdump reveals that in reality there's one more 'key' wave stored - 4Bh in the slot 3Ch. It seems to be used only to allow further interpolation, because it's overriden with the always present traingle wave.
+The interpolated waveforms, however, go on further - up to the slot 3Bh, after which the set of waveforms common for all wavetables follows. Examining the next two bytes of hexdump reveals that in reality there's one more 'key' wave stored - 4Bh in the slot 3Ch. It seems to be used only to allow further interpolation, because it's overridden with the always present triangle wave.
 
 The next byte is 01h and it's followed by information about wavetable 1. That would mean that each wavetable data entry is preceded with the wavetable number. While this pattern works for most of the  wavetables, it's broken for some. Anyway, this information is not really useful and this byte can apparently be ignored.
 
