Add link and change one word

--- a/_posts/2019-12-10-PPG-EPROM.md
+++ b/_posts/2019-12-10-PPG-EPROM.md
@@ -10,7 +10,7 @@ comments: true
 PPG Wave synthesizer range is undoubtedly very unique. It is not very popular, but I've seen some people looking for its wavetables or waveform samples on different forums. Recently, I managed to extract those from EPROM dumps I found online, so I just wanted to share my findings with all of you, who are still looking for it.
 
 ## Getting the EPROM image
-The first challenge I was facing was getting the EPROM images. Fortunately, that's not as hard as I initially thought, and there are actually two ways of obtaining it
+The first challenge I was facing was getting the EPROM images. Fortunately, that's not as hard as I initially thought, and there are actually two ways of obtaining those.
 
 The _easy_ way means downloading the image from website such as [this one](http://dbwbp.com/index.php/9-misc/37-synth-eprom-dumps).
 
@@ -87,6 +87,8 @@ In conclusion, we can express the wavetable data format with this horrible mixtu
 I decided to write a little C program to extract the wavetable data from the EPROM and output it in a more human-readable format.
 
 <script src="https://gist.github.com/Jacajack/5a5d51a379358cc4f3827782868deeed.js"></script>
+
+[These](https://gist.github.com/Jacajack/509370b54d1d7c197d019987ffb438fb) are my results.
 
 Keep in mind, that it only makes sense to run this program on the first 768b of the EPROM image. Even then it extracts more data than it should, what leads me to think that there's more configuration data preceding the waveforms (program data perhaps?).
 
