--- a/_posts/2019-12-10-PPG-EPROM.md
+++ b/_posts/2019-12-10-PPG-EPROM.md
@@ -14,7 +14,7 @@ The first challenge I was facing was getting the EPROM images. Fortunately, that
 
 The _easy_ way means downloading the image from website such as [this one](http://dbwbp.com/index.php/9-misc/37-synth-eprom-dumps).
 
-The hard way relies on extracting resources from VST DLL file with a proper tool (check [this one](https://www.nirsoft.net/utils/resources_extract.html)). If you're lucky, you might get `something_EPROM.bin` in your output.
+The hard way relies on extracting resources from VST DLL file with a proper tool (check [NirSoft ResourcesExtract](https://www.nirsoft.net/utils/resources_extract.html)). If you're lucky, you might get `something_EPROM.bin` in your output.
 
 I recommend you to stick with the easy way.
 
@@ -103,7 +103,7 @@ Here are some important resources, that made everything you just read possible:
  - [Herman Seib's website](https://www.hermannseib.com/)
  - [PPG Wave website](http://www.ppg.synth.net/wave22/)
  - [The PPG Wave waveform and wavetable description](https://www.cyborgstudio.com/wimpy/synthmp3s/ppg/wave2/manual/ppgwavetables.pdf)
- - [NirSoft ResourceExtract](https://www.nirsoft.net/utils/resources_extract.html)
+ - [NirSoft ResourcesExtract](https://www.nirsoft.net/utils/resources_extract.html)
  - [Synthesizer EPROM dumps](http://dbwbp.com/index.php/9-misc/37-synth-eprom-dumps)
 
 Thank you for reading :)
