--- a/_posts/2019-12-10-PPG-EPROM.md
+++ b/_posts/2019-12-10-PPG-EPROM.md
@@ -6,17 +6,16 @@ categories: music
 comments: true
 
 ---
-
-PPG Wave synthesizer range is undoubtedly very unique. It is not very popular, but I've seen some people looking for its wavetables or waveform samples on different forums. Recently, I managed to extract those from EPROM dumps I found online, so I just wanted to share my findings with all of you, who are still looking for it.
+PPG Wave synthesizer range is undoubtedly very unique. It is not very popular, but I've seen some people looking for its wavetables or waveform samples on different forums. Recently, I managed to extract those from EPROM dumps I found online, so I just wanted to share my findings with all of you, who may be looking for it.
 
 ## Getting the EPROM image
 The first challenge I was facing was getting the EPROM images. Fortunately, that's not as hard as I initially thought, and there are actually two ways of obtaining those.
 
-The _easy_ way means downloading the image from website such as [this one](http://dbwbp.com/index.php/9-misc/37-synth-eprom-dumps).
+The _easy_ way means downloading the image from website such as [this one](http://dbwbp.com/index.php/9-misc/37-synth-eprom-dumps). I got `PPG EVU version 1.0.zip` and merged all the files inside into one called `eprom.bin`.
 
 The hard way relies on extracting resources from VST DLL file with a proper tool (check [NirSoft ResourcesExtract](https://www.nirsoft.net/utils/resources_extract.html)). If you're lucky, you might get `something_EPROM.bin` in your output.
 
-I recommend you to stick with the easy way.
+I recommend you stick with the easy way.
 
 ## Inspecting the EPROM contents
 This may sound silly, but believe it or not - Audacity is actually great for inspecting binary files, especially when you're looking for waveforms. You can also see (and hear) if parts of binary file are machine code or data relatively well. Anyway, that's where I started.
@@ -38,13 +37,13 @@ At this point, it's very easy to see the matching part. Just remember that the P
 On Linux, the data can be extracted to another file with `dd` command:
 ```dd if=eprom.bin of=waveforms.bin skip=768 count=16384 bs=1```
 
-I converted the data to a C array, so I can access it in my future code. It's available as a Gist [here](https://gist.github.com/Jacajack/0d90f1617d95452d05095893d31a4222) (be careful, it's quite long).
+I converted the data to a C array, so it can be accessed easily in code. It's available as a Gist [here](https://gist.github.com/Jacajack/0d90f1617d95452d05095893d31a4222) (be careful, it's quite long).
 You can also convert it into separate WAV files, but I haven't tried that yet.
 
 ## Reverse engineering the wavetable format
-It's great that we managed to extract the waveform data, but unfortunately it's not very useful on its own. We still don't have any information about wavetables - they
+It's great that we managed to extract the waveform data, but unfortunately it's not very useful on its own. We also need the wavetable data in order to know how to combine the waveforms properly.
 
-Earlier, I said that the first 768 bytes of EPROM look like data to me. That's why I decided to examine them more closely and that was a good decision. Please take a look at this excerpt of `xxd eprom.bin`:
+Earlier, I said that the first 768 bytes of EPROM look like data. That's why I decided to examine them more closely - that was a good decision. Please take a look at this excerpt of `xxd eprom.bin`:
 ```
 00000000: 0065 0045 0846 1047 1848 2049 284a 304b  .e.E.F.G.H I(J0K
 00000010: 3c01 4d00 4e08 4f10 5018 5120 5228 5330  <.M.N.O.P.Q R(S0
@@ -53,18 +52,19 @@ Earlier, I said that the first 768 bytes of EPROM look like data to me. That's w
 00000040: 0001 1800 3001 3c05 8300 8408 8d10 8e18  ....0.<.........
 ```
 
-Initially, let's treat each byte as waveform index and work out if it matches layout of any of the wavetables.
+Initially, let's treat each byte as waveform index and try to work out if it matches layout of any of the wavetables.
 
-![]({{site.baseurl}}/img/ppg/wav00h.png) ![]({{site.baseurl}}/img/ppg/wav65h.png) ![]({{site.baseurl}}/img/ppg/wav00h.png) ![]({{site.baseurl}}/img/ppg/wav45h.png) ![]({{site.baseurl}}/img/ppg/wav08h.png)
+![]({{site.baseurl}}/img/ppg/wav_combined.png)
 
-And here's wavetable 0:
+And here's the wavetable 0:
 
 ![]({{site.baseurl}}/img/ppg/table0.png)
+
 Keep in mind, that the waveforms with red text over them are results of interpolation and are not stored anywhere in the waveform bank. That means, here only waves 0, 8, 16 (and so on) are stored in the waveform table. I'm going to call them 'key' waveforms for the lack of a better name.
 
 Anyway, did you notice that first 'key' waveform in the wavetable 0 is exactly the same as wave 65h? The second one looks exactly like waveform 45h. That gives us an important clue. It seems that every second byte denotes waveform index. Moreover, you can notice that each index byte is followed by wave position (slot) in the wavetable.
 
-This pattern extends and we eventually get to seemingly the last "key" wave in wavetable 0 - wave 4Ah on position 30h. 
+This pattern extends and we eventually get to seemingly the last 'key' wave in wavetable 0 - wave 4Ah on position 30h. 
 
 ![Wavetable 0]({{site.baseurl}}/img/ppg/table0back.png)
 
@@ -95,11 +95,10 @@ Keep in mind, that it only makes sense to run this program on the first 768b of 
 The PDF file with wavetable description tells us that the last 'real' wavetable is the wavetable 27, because 28 and 29 are entirely calculated by the synthesizer. There's however a thing called 'Upper Wavetable' and it seems to reside in EPROM right after wavetable 27, technically making it the _physical_ wavetable 28.
 
 ## Summary
-I hope you found this 'article' useful or at least interesting. That's all.
+I hope you found this 'article' useful or at least interesting.
 Also, if you have any thoughts, please let me know in the comments section or [email me](mailto:mrjjot@gmail.com).
 
-
-Here are some important resources, that made everything you just read possible:
+Here are some important links:
  - [Herman Seib's website](https://www.hermannseib.com/)
  - [PPG Wave website](http://www.ppg.synth.net/wave22/)
  - [The PPG Wave waveform and wavetable description](https://www.cyborgstudio.com/wimpy/synthmp3s/ppg/wave2/manual/ppgwavetables.pdf)
