--- a/_posts/2020-04-25-More-PPG.md
+++ b/_posts/2020-04-25-More-PPG.md
@@ -219,7 +219,7 @@ for n in {0..28}; do
 done;
 ```
 
-And Viola! [Hear it for yourself!](https://github.com/Jacajack/wave-stuff/blob/master/wav_dump/wav/long_1.wav)
+And Viola! [Hear it for yourself!](https://github.com/Jacajack/wave-stuff/blob/master/wav_dump/wav/long_1.wav?raw=true)
 
 All samples and code for exporting them is [here](https://github.com/Jacajack/wave-stuff/tree/master/wav_dump).
 
