--- a/_posts/2020-04-25-More-PPG.md
+++ b/_posts/2020-04-25-More-PPG.md
@@ -200,11 +200,11 @@ while ( 1 )
 You can find the entire code [here](https://github.com/Jacajack/wave-stuff/blob/master/ppg_aplay.c).
 Run `./ppg_aplay | aplay` and you should hear a PPG-style waveform sweep. I think it sounds right!
 
-_As a side note: When you change waveforms and want to avoid clicking artifacts, make sure you make the switch on zero crossing (phase values 0 and 0.5)._
+_As a side note: When you change waveforms and want to avoid clicking artifacts, make sure you make the switch on a signal zero-crossing (phase values 0 and 0.5)._
 
 ## Exporting WAV files
 
-Let's face it - playing sounds through `aplay` isn't really that useful... Most of you (if anybody) probably came here for sample files. Luckily, playing stuff with `aplay` is literally one step away from having WAV files.
+Let's face it - playing sounds through `aplay` isn't really that useful... Most of you probably came here for sample files I haven't provided the last time. Luckily, playing stuff with `aplay` is literally one step away from having WAV files.
 
 I quickly wrote a tiny utility - `mkwav`. It basically dumps binary data from `stdin` into a file, but prepends a proper WAV file header, making it playable binary data.
 It's available in my [misc repository](https://github.com/Jacajack/misc/tree/master/linux/mkwav).
