Add link to follow-up

--- a/_posts/2019-12-10-PPG-EPROM.md
+++ b/_posts/2019-12-10-PPG-EPROM.md
@@ -107,6 +107,8 @@ Here are some important links:
 
 Thank you for reading :)
 
+[*A follow-up post*](https://jacajack.github.io/music/synths/2020/04/25/More-PPG.html)
+
 {% if page.comments %}
 {% include disqus.html %}
 {% endif %}
