--- a/_posts/2020-04-25-More-PPG.md
+++ b/_posts/2020-04-25-More-PPG.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "PPG Wave - making sounds"
+title:  "PPG Wave - making sounds and samples"
 date:   2020-04-25 17:32:00 +0200
 categories: music synths
 comments: true
@@ -219,7 +219,7 @@ for n in {0..28}; do
 done;
 ```
 
-And Viola! [Hear it for yourself!](https://github.com/Jacajack/wave-stuff/blob/master/wav_dump/wav/long_1.wav?raw=true)
+And we're done! [Hear it for yourself.](https://github.com/Jacajack/wave-stuff/blob/master/wav_dump/wav/long_1.wav?raw=true)
 
 All samples and code for exporting them is [here](https://github.com/Jacajack/wave-stuff/tree/master/wav_dump).
 
